<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="view"
            type="com.example.there.findclips.activities.artist.ArtistView" />
    </data>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background_gradient"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.artist.ArtistFragment"
        tools:showIn="@layout/fragment_artist">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/artist_albums_label"
                style="@style/LargeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/albums" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/artist_albums_recycler_view"
                style="@style/HorizontalGridRecyclerViewSpan2"
                android:layout_width="0dp"
                android:adapter="@{view.albumsAdapter}"
                android:visibility="@{safeUnbox(view.state.albumsLoadingInProgress) ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artist_albums_label" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{safeUnbox(view.state.albumsLoadingInProgress) ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/artist_albums_recycler_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/artist_albums_recycler_view" />

            <TextView
                android:id="@+id/artist_top_tracks_label"
                style="@style/LargeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/top_tracks"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artist_albums_recycler_view" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/artist_top_tracks_recycler_view"
                style="@style/HorizontalGridRecyclerViewSpan2"
                android:layout_width="0dp"
                android:adapter="@{view.topTracksAdapter}"
                android:visibility="@{safeUnbox(view.state.albumsLoadingInProgress) ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artist_top_tracks_label" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{safeUnbox(view.state.topTracksLoadingInProgress) ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/artist_top_tracks_recycler_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/artist_top_tracks_recycler_view" />

            <TextView
                android:id="@+id/artist_related_artists_label"
                style="@style/LargeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/related_artists"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artist_top_tracks_recycler_view" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/artist_related_artists_recycler_view"
                style="@style/HorizontalGridRecyclerViewSpan2"
                android:layout_width="0dp"
                android:visibility="@{safeUnbox(view.state.albumsLoadingInProgress) ? View.INVISIBLE : View.VISIBLE}"
                android:adapter="@{view.relatedArtistsAdapter}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artist_related_artists_label" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{safeUnbox(view.state.relatedArtistsLoadingInProgress) ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/artist_related_artists_recycler_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/artist_related_artists_recycler_view" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>

